# structured-eval

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  introduction.md
docs/core-concepts/: array-alignment.md  comparison-is-a-metric.md  evaluation-model.md
docs/evaluation/: evaluate-batch.md  evaluate-consistency.md  evaluate.md  index.md
docs/metrics/: custom-metric.md  index.md
docs/metrics/catalog/: array-accuracy.md  array-cardinality.md  array-exact-match.md  array-f1.md  array-jaccard-similarity.md  array-precision.md  array-prf1.md  array-recall.md  character-f1.md  composite-score.md  coverage-leaf-score.md  date-distance-score.md  exact-match.md  exponential-numeric-score.md  field_faithfulness.md  fuzzy.md  levenshtein.md  mean-score.md  numeric-closeness.md  numeric.md  object-accuracy.md  object-exact-match.md  object-f1.md  object-precision.md  object-prf1.md  object-recall.md  object-type-validity.md  overall-leaf-score.md  presence.md  regex-match.md  rule-pass-rate.md  schema-validity.md  structural-similarity.md  token-f1.md  type-match.md  url-match.md
structured_eval/: __init__.py  _evaluate.py  api.py
structured_eval/align/: __init__.py  strategies.py
structured_eval/alignment/: __init__.py  aligners.py  base.py  by_index.py  by_key.py  factory.py  hungarian.py
structured_eval/core/: config.py  context.py  evaluator.py  result.py  sample.py
structured_eval/diff/: __init__.py  structured_diff.py
structured_eval/engine/: __init__.py  aggregate.py  aggregator.py  compute.py  evaluator.py  match.py  metric_runner.py  parser.py  report_builder.py  tree_builder.py
structured_eval/faithfulness/: __init__.py  substring.py
structured_eval/formats/: __init__.py  json_parser.py  yaml_parser.py
structured_eval/integrations/: __init__.py  _adapter.py  deepeval.py  langsmith.py
structured_eval/matchers/: __init__.py  autodetect.py  exact.py  fuzzy.py  jaccard.py  numeric.py  protocol.py  regex_normalized.py  token_f1.py  url.py
structured_eval/metrics/: __init__.py  _array_stats.py  _element_score.py  _match_criterion.py  _object_stats.py  _tree.py  array_accuracy.py  array_cardinality.py  array_exact_match.py  array_f1.py  array_jaccard_similarity.py  array_metrics.py  array_precision.py  array_prf1.py  array_recall.py  base.py  character_f1.py  composite_score.py  coverage.py  coverage_leaf_score.py  date_distance_score.py  exact.py  exponential_numeric_score.py  field_accuracy.py  field_faithfulness.py  fuzzy.py  invoker.py  levenshtein.py  matchers.py  mean_score.py  normalized.py  numeric.py  numeric_closeness.py  object_accuracy.py  object_exact_match.py  object_f1.py  object_precision.py  object_prf1.py  object_recall.py  object_type_validity.py  (+11 more)
structured_eval/metrics/_shared/: array_stats.py  element_score.py  match_criterion.py
structured_eval/metrics/faithfulness/: __init__.py  metric.py  substring.py
structured_eval/metrics/field/: __init__.py  exact.py  fuzzy.py  normalized.py  numeric.py  presence.py  token_f1.py  type_match.py
structured_eval/metrics/rule_pass_rate/: __init__.py  dsl.py  engine.py  metric.py
structured_eval/metrics/schema_validity/: __init__.py  metric.py  validator.py
structured_eval/metrics/utils/: __init__.py  array.py  calculate.py  null.py  number.py  object_utils.py
structured_eval/model/: config.py  context.py  metric_result.py  result.py  sample.py
structured_eval/model/nodes/: __init__.py  array_node.py  base.py  object_node.py  scalar.py
structured_eval/models/: __init__.py  config.py  context.py  result.py  sample.py
structured_eval/models/nodes/: __init__.py  array_node.py  base.py  object_node.py  scalar.py
structured_eval/nodes/: __init__.py  array_node.py  base.py  object_node.py  scalar.py
structured_eval/parsers/: __init__.py  base.py  json_parser.py  yaml_parser.py
structured_eval/report/: __init__.py  console.py  serialize.py
structured_eval/reporting/: __init__.py  console.py
structured_eval/rules/: __init__.py  dsl.py  engine.py
structured_eval/schema/: __init__.py  coverage.py  validator.py
structured_eval/utils/: __init__.py  flatten.py  paths.py  structured_diff.py
tests/: README.md  conftest.py  test_array_metrics.py  test_faithfulness.py  test_flatten.py  test_matchers_new.py  test_regression_diff.py  test_rules.py  test_schema_only.py  test_structured_diff.py
tests/api/: test_actual_only.py  test_evaluate.py  test_schema_only.py
tests/engine/: test_batch.py  test_consistency.py  test_default_node_metrics.py  test_evaluator.py  test_levels_l0_l6.py  test_metric_name_override.py
tests/fixtures/: invoices.json
tests/golden/: test_fixtures_eval.py
tests/integration/: test_host_adapters.py
tests/properties/: conftest.py  test_alignment_optimality.py  test_metamorphic.py  test_metric_invariants.py  test_parse_robustness.py  test_serialization_roundtrip.py
tests/smoke/: integrations.md  stage11.md  stage11_asserts.md  stage3.md  stage4.md  stage5.md  stage6.md  stage7.md  stage8.md  stage9.md
tests/unit/: test_adapter.py  test_alignment.py  test_formats.py  test_nodes.py  test_reporting.py  test_reporting_console.py  test_reporting_render.py
tests/unit/alignment/: test_by_index.py  test_by_key.py  test_factory.py  test_hungarian.py
tests/unit/formats/: test_json_parser.py  test_yaml_parser.py
tests/unit/metrics/: test_array_exact_match.py  test_array_jaccard_similarity.py  test_array_metrics.py  test_character_f1.py  test_composite_score.py  test_coverage_leaf_score.py  test_date_distance_score.py  test_exact.py  test_exponential_numeric_score.py  test_faithfulness.py  test_field_faithfulness.py  test_field_metrics.py  test_fuzzy.py  test_metric_contracts.py  test_numeric.py  test_numeric_closeness.py  test_object_exact_match.py  test_object_metrics.py  test_overall_leaf_score.py  test_presence.py  test_regex_match.py  test_registry.py  test_root_metrics.py  test_rule_pass_rate.py  test_rules.py  (+5 more)
(+9 files in other folders)
