[project]
name = "structured-eval"
version = "0.1.0"
description = "The LLM Structured Output Evaluation Framework"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
fuzzy = ["rapidfuzz>=3.0"]
jsonschema = ["jsonschema>=4.26.0"]
rules = ["jsonpath-ng>=1.6"]
diff = ["deepdiff>=9.1.0"]
all = ["pyyaml>=6.0", "rapidfuzz>=3.0", "jsonschema>=4.26.0", "jsonpath-ng>=1.6", "deepdiff>=9.1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "types-pyyaml>=6.0",
    "jsonschema>=4.26.0",
    "types-jsonschema>=4.26.0.20260518",
    "jsonpath-ng>=1.6",
    "deepdiff>=9.1.0",
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
