[project]
name = "structured-eval"
version = "0.1.0"
description = "The LLM Structured Output Evaluation Framework"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
fuzzy = ["rapidfuzz>=3.0"]
jsonschema = ["jsonschema>=4.26.0"]
rules = ["jsonpath-ng>=1.6"]
diff = ["deepdiff>=9.1.0"]
report = ["rich>=13.0"]
align = ["scipy>=1.12"]
deepeval = ["deepeval>=1.0"]
langsmith = ["langsmith>=0.1"]
all = ["pyyaml>=6.0", "rapidfuzz>=3.0", "jsonschema>=4.26.0", "jsonpath-ng>=1.6", "deepdiff>=9.1.0", "rich>=13.0", "scipy>=1.12"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "types-pyyaml>=6.0",
    "jsonschema>=4.26.0",
    "types-jsonschema>=4.26.0.20260518",
    "jsonpath-ng>=1.6",
    "deepdiff>=9.1.0",
    "scipy>=1.12",
    "scipy-stubs>=1.12",
]

[tool.mypy]
python_version = "3.12"
strict = true

# Optional third-party deps without type stubs (lazy-imported behind extras).
[[tool.mypy.overrides]]
module = ["jsonpath_ng.*", "deepeval.*", "langsmith.*", "deepdiff.*", "rapidfuzz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
markers = [
    "unit: pure unit tests (single module, no engine)",
    "engine: end-to-end through the Evaluator",
    "integration: host-framework adapters (deepeval/langsmith)",
    "golden: regression on dataset fixtures",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
